tests/purs/failing/CoercibleRoleMismatch2.out
Error found:
in module [33mMain[0m
at tests/purs/failing/CoercibleRoleMismatch2.purs:8:1 - 8:23 (line 8, column 1 - line 8, column 23)

  Role mismatch for the type parameter [33ma[0m:

    The annotation says [33mphantom[0m but the role [33mnominal[0m is required.


in role declaration for [33mV[0m
in type constructor [33mV[0m

See https://github.com/purescript/documentation/blob/master/errors/RoleMismatch.md for more information,
or to contribute content related to this error.

